// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playground > should playground-layer config normal 1`] = `
{
  "x": 200,
  "y": 200,
}
`;

exports[`playground > should playground-layer config normal 2`] = `
{
  "x": 400,
  "y": 400,
}
`;

exports[`playground > should playground-layer config normal 3`] = `
{
  "x": 0,
  "y": 0,
}
`;

exports[`playground > should playground-layer config normal 4`] = `
_Rectangle {
  "height": 0,
  "type": 1,
  "width": 0,
  "x": 100,
  "y": 100,
}
`;

exports[`playground > should playground-layer config normal 5`] = `
_Rectangle {
  "height": 0,
  "type": 1,
  "width": 0,
  "x": 200,
  "y": 200,
}
`;

exports[`playground > should render playground-layer 1`] = `""`;
